# PLEarn-Contract

./: Cargo.toml  README.md  issues.md
.github/workflows/: test.yml
challenges/advanced/01-staking-contract/: Cargo.toml  INSTRUCTIONS.md
challenges/advanced/01-staking-contract/src/: lib.rs
challenges/advanced/01-staking-contract/tests/: test.rs
challenges/advanced/02-multisig-wallet/: Cargo.toml  INSTRUCTIONS.md
challenges/advanced/02-multisig-wallet/src/: lib.rs
challenges/advanced/02-multisig-wallet/tests/: test.rs
challenges/beginner/01-hello-token/: Cargo.toml  INSTRUCTIONS.md
challenges/beginner/01-hello-token/src/: lib.rs
challenges/beginner/01-hello-token/test_snapshots/tests/: test_mint_accumulates.1.json  test_mint_and_balance.1.json
challenges/beginner/02-token-transfer/: Cargo.toml  INSTRUCTIONS.md
challenges/beginner/02-token-transfer/src/: lib.rs
challenges/beginner/02-token-transfer/test_snapshots/tests/: test_transfer.1.json  test_transfer_full_balance.1.json  test_transfer_insufficient_balance.1.json
challenges/beginner/02-token-transfer/tests/: test.rs
docs/: SETUP_GUIDE.md  contributing.md
docs/diagrams/: README.md
scripts/: feedback_validator.sh  html_report.sh  publish-issues.py  run-tests.sh  validate.sh  watch.sh
